# TGM

./: .gitignore  README.md  pom.xml
.VSCodeCounter/2024-08-30_05-40-14/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
auth/: .env  Cargo.toml  README.md
auth/121221212migrations/dev_initial/: 00-recreate-db.sql  01-create-schema.sql
auth/adapter/: Cargo.toml
auth/adapter/.cargo/: config.toml
auth/adapter/src/routers/: router.rs
auth/application/: Cargo.toml
auth/application/src/: lib.rs
auth/application/src/common/: error.rs  res.rs
auth/application/src/service/: user_service.rs  user_service_trait.rs
auth/application/src/use_case/: auth_use_case.rs  get_info_use_case.rs  login_user_use_case.rs  logout_user_use_case.rs  place_order_use_case.rs  refresh_token_use_case.rs  register_user_use_case.rs  user_use_case.rs
auth/application/src/util/: app_bar.rs  app_foo.rs
auth/common/src/: error.rs
auth/domain/: Cargo.toml
auth/domain/src/: lib.rs
auth/domain/src/error/: error.rs
auth/domain/src/model/: mod.rs  order.rs  prelude.rs  product.rs  user.rs
auth/domain/src/model/dto/: order_dto.rs  user_dto.rs
auth/domain/src/repositories/: auth_repository.rs  order_repository.rs  user_repository.rs
auth/domain/src/service/: auth_service.rs  order_service.rs  user_service.rs
auth/domain/src/value_object/: order_status.rs
auth/infrastructure/: Cargo.toml
auth/infrastructure/src/: config.rs  lib.rs
auth/infrastructure/src/config/: config.rs  db_config.rs
auth/infrastructure/src/database/: redis_connection.rs
auth/infrastructure/src/entities/: mod.rs  order.rs  permission.rs  prelude.rs  role.rs  role_permission.rs  user.rs  user_role.rs
auth/infrastructure/src/middleware/: jwt.rs
auth/infrastructure/src/persistence/: auth_repository_impl.rs  order_repository_impl.rs  query_user_repository_impl.rs  user_persistence.rs  user_repository_impl.rs
auth/infrastructure/src/utils/: jwt_util.rs  password_util.rs  redis_util.rs
auth/infrastructure/tests/: password_util_test.rs  redis_test.rs
auth/interface/: Cargo.toml
auth/interface/src/: lib.rs
auth/interface/src/adapter/: auth_handler.rs  user_handler.rs
auth/interface/src/api/: api.rs  auth_api.rs
auth/interface/src/common/: response.rs
auth/interface/src/routers/: auth_routes.rs  user_routes.rs
auth/logs/: app.log.2024-10-01  app.log.2024-10-02  app.log.2024-10-04  app.log.2024-10-05  app.log.2024-10-06
auth/migration/: .env
auth/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220101_000002_create_table.rs
auth/src/: main.rs  util.rs
auth/src/util/: bar.rs  foo.rs
auth/tests/: quick_dev.rs
link-gateway/: Cargo.toml  README,md
tgm-front/src/app/: layout.tsx  page.tsx
tgm-front/src/components/: index.tsx
tgm-front/src/components/common/: Footer.tsx  SearchBar.tsx
tgm-front/src/components/home/: CustomHome.tsx
tgm-gateway/: pom.xml
tgm-gateway/src/main/resources/: application.yml
tgm-marketing/: pom.xml
tgm-marketing/tgm-marketing-app/: pom.xml
tgm-marketing/tgm-marketing-app/src/main/resources/: application.yml  logback-spring.xml
tgm-marketing/tgm-marketing-application/: pom.xml
tgm-marketing/tgm-marketing-domain/: pom.xml
tgm-marketing/tgm-marketing-infrastructure/: pom.xml
tgm-marketing/tgm-marketing-interfaces/: pom.xml
tgm-marketing/tgm-marketing-trigger/: pom.xml
tgm-marketing/tgm-marketing-types/: pom.xml
tgm-pay/: pom.xml
tgm-pay/tgm-pay-application/: pom.xml
tgm-pay/tgm-pay-domain/: pom.xml
tgm-pay/tgm-pay-infrastructure/: pom.xml
tgm-pay/tgm-pay-interfaces/: pom.xml
(+68 files in other folders)
