[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    ".",
    "application",
    "domain",
    "infrastructure",
    "interface",
    "domain",
    "application",
    "migration",
]
[dependencies]
domain = { path = "domain" }
application = { path = "application" }
infrastructure = { path = "infrastructure" }
interface = { path = "interface" }
migration = { path = "migration" }

# 工作区依赖仅指定版本，serde = { workspace = true }才是真正导入
[workspace.dependencies]
domain = { path = "domain" }
application = { path = "application" }
infrastructure = { path = "infrastructure" }
interface = { path = "interface" }
migration = { path = "migration" }
# web框架
axum = "0.7.5"
# 提供了一些额外的功能，如处理特定类型的 HTTP 头
axum-extra = { version = "0.9.3", features = ["typed-header"] }
# orm
sea-orm = { version = "1.0.0", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
# session
# async-session = "3.0.0"
# 读取toml文件
# toml = "0.8.19"
# oauth2
# oauth2 = "4.1"
# 错误处理
anyhow = "1.0.86"
# 自定义错误处理
thiserror = "1.0.16"
# 提供了静态文件服务
tower-http = { version = "0.5", features = ["cors","fs","trace"] }
# cookie
tower-cookies = "0.10"
# 异步运行时
tokio = { version = "1.40.0", features = ["full"] }
# 序列化和反序列化数据
serde = { version = "1.0.127", features = ["derive"] }
# 序列化JSON
serde_json = "1.0.128"
# 序列化时间
serde_with = "3.8.2"
# 分布式跟踪的 SDK，用于采集监控数据，这里用其日志功能
tracing = "0.1.40"
tracing-error = "0.2.0"
# 日志过滤器
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# 读取env
dotenvy = "0.15.7"
mime = "0.3.17"

chrono = "0.4.38"
[dev-dependencies]
